<?xml version="1.0"?>
<package format="3">
  <name>extractor_node</name>
  <version>0.0.1</version>
  <description>A ROS2 package that subscribes to audio and video messages</description>

  <maintainer email="ziangliu@tudelft.nl">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Run-time dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cae_microphone_array</depend>  
  <depend>message_filters</depend>


  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
